src/styles/features/time.css
#time {
    position: relative;
}

#time:before {
    box-shadow: 0px 0px 100px 40px rgb(34 34 34 / 0.2666666667);
}

#time.hidden {
    display: none;
}

#time.seconds .digital-mm-separator,
#time.seconds .digital-ss {
    display: inline;
}

#time.seconds .analog-seconds {
    display: block;
}

#time.is-analog .digital {
    display: none;
}

#time.is-analog .analog {
    display: inline-block;
}

#time-container {
    display: inline-flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 4em;
}

.digital {
    position: relative;
    margin: 0;
    margin-bottom: 0.1em;
    margin-inline-start: calc(var(--seconds-margin-offset) / 2);
    font-size: calc(var(--clock-size) * 6);
    line-height: 1em;
    font-weight: 200;
    font-weight: var(--font-weight-clock);
    direction: ltr;
}

.digital span {
    text-align: left;
}

.digital-hh,
.digital-mm,
.digital-hh-separator {
    display: inline-block;
}

.digital-hh-leading-zero,
.digital-mm-separator,
.digital-ss {
    display: none;
}

.digital.zero .digital-hh-leading-zero {
    display: inline-block;
}

#time.seconds .digital-ss {
    display: inline-block;
    width: var(--seconds-width);
    font-variant-numeric: tabular-nums;
}

/*
 * Digital AM/PM
 */

.digital-ampm {
    font-size: 0.4em;
    line-height: 0.8em;
}

.digital-am,
.digital-pm {
    padding-inline: 0.2em;
}

.digital-am,
.digital-pm,
.digital-ampm {
    display: none;
}

[data-ampm][data-ampm-label] .digital-ampm {
    position: absolute;
    display: inline-block;
}

[data-ampm='pm'][data-ampm-label] .digital-pm,
[data-ampm='am'][data-ampm-label] .digital-am {
    display: inline-block;
}

[data-ampm-label='top-left'] .digital-ampm,
[data-ampm-label='bottom-left'] .digital-ampm {
    left: 0;

    .digital-am,
    .digital-pm {
        transform: translateX(-100%);
    }
}

[data-ampm-label='bottom-right'] .digital-ampm,
[data-ampm-label='bottom-left'] .digital-ampm {
    bottom: 0;
}

[data-ampm-label='top-left'] .digital-am,
[data-ampm-label='top-left'] .digital-pm,
[data-ampm-label='top-right'] .digital-am,
[data-ampm-label='top-right'] .digital-pm {
    vertical-align: text-bottom;
}

[data-ampm-label='bottom-left'] .digital-am,
[data-ampm-label='bottom-left'] .digital-pm,
[data-ampm-label='bottom-right'] .digital-am,
[data-appm-label='bottom-right'] .digital-pm {
    vertical-align: text-top;
}

/*
 * Analog clock
 */

.analog {
    display: none;
    position: relative;
    width: calc(var(--clock-size) * 8);
    height: calc(var(--clock-size) * 8);
    border: calc(var(--clock-size) * 0.2) solid;
    border-color: var(--analog-border);
    background-color: var(--analog-background);
    backdrop-filter: blur(1em);
    -webkit-backdrop-filter: blur(1em);
    /* box-shadow: 0 1px 5px rgb(0 0 0 / 0.2); */
    color: rgb(var(--font-on-blur-color));
}

/* shape */
#time[data-shape='round'] .analog {
    border-radius: 100%;
}

#time[data-shape='square'] .analog {
    border-radius: calc(var(--clock-size) * 0.4);
}

#time[data-shape='rectangle'] .analog {
    border-radius: calc(var(--clock-size) * 1.5);
    height: calc(var(--clock-size) * 9.5);
}

/* background */
#time.transparent .analog {
    box-shadow: unset;
    backdrop-filter: none;
    -webkit-backdrop-filter: none;
}

/* center */
.analog-center {
    position: absolute;
    top: 50%;
    left: 50%;
    width: calc(var(--clock-size) * 0.4);
    height: calc(var(--clock-size) * 0.4);
    border-radius: calc(var(--clock-size) * 0.4);
    transform: translate(-50%, -50%);
    background-color: white;
    z-index: 5;
}

/* hands */
.analog-minutes,
.analog-hours,
.analog-seconds {
    transform: rotate(var(--deg));
    position: absolute;
    display: block;
    bottom: 50%;
    left: 50%;
    box-shadow: 0 1px 5px rgb(0 0 0 / 0.2);
    width: calc(var(--clock-size) * 0.2);
    /* margin-left: calc(var(--clock-size) * -0.1); */
    border-radius: calc(var(--clock-size) * 0.2);
    transform-origin: bottom center;
    background-color: white;
    left: 0;
    right: 0;
    margin: auto;
}

.analog-hours {
    height: calc(var(--clock-size) * 2.4);
}

.analog-minutes {
    height: calc(var(--clock-size) * 3.6);
}

.analog-seconds {
    display: none;
    height: calc(var(--clock-size) * 3.6);
    opacity: 0.8;
    background-color: #e30713;
    width: calc(var(--clock-size) * 0.1);
}

/* swiss hands */
#time[data-hands='swiss'] .analog-center {
    display: none;
}

#time[data-hands='swiss'].seconds .analog-center {
    display: block;
    background-color: #e30713;
    width: calc(var(--clock-size) * 0.3);
    height: calc(var(--clock-size) * 0.3);
}

#time[data-hands='swiss'] .analog-hours {
    height: 30%;
    width: calc(var(--clock-size) * 0.35);
    border-radius: 0;
}

/* bit that pokes out */
#time[data-hands='swiss'] .analog-hours:after {
    content: '';
    display: block;
    position: absolute;
    background-color: white;
    width: calc(var(--clock-size) * 0.35);
    height: calc(var(--clock-size) * 1.2);
    bottom: calc(var(--clock-size) * -1.2);
    left: 50%;
    transform: translateX(-50%);
}

#time[data-hands='swiss'] .analog-minutes {
    height: calc(var(--clock-size) * 3.69);
    width: calc(var(--clock-size) * 0.25);
    border-radius: 0;
}

/* bit that pokes out */
#time[data-hands='swiss'] .analog-minutes:after {
    content: '';
    display: block;
    position: absolute;
    background-color: white;
    width: calc(var(--clock-size) * 0.25);
    height: calc(var(--clock-size) * 1.2);
    bottom: calc(var(--clock-size) * -1.2);
    left: 50%;
    transform: translateX(-50%);
}

#time[data-hands='swiss'] .analog-seconds {
    height: calc(var(--clock-size) * 2.8);
    border-radius: 0;
    opacity: 1;
}
/* ... */

